# Screenshot

./: README.md
.cache/clangd/index/: main.cpp.56B7BC1707492ED5.idx  screenshotwindow.cpp.738D1EB27B3A337D.idx  screenshotwindow.h.40C8C1E7FC93E245.idx
ScreenshotLinux/: CMakeLists.txt  main.cpp  screenshotwindow.cpp  screenshotwindow.h
autostart/: screenshot-linux.desktop
